# AlphaPlantImpute2

./: .gitignore  .gitmodules  AUTHORS  LICENSE  README.md  alphaplantimpute2-1.5.3-py3-none-any.whl  build_pipeline.sh  pythonhmm-script.py  setup.cfg  setup.py
alphaplantimpute2/: alphaplantimpute2.py
docs/source/: conf.py  index.rst
example/: README.txt  accuracy.py  checkResults.r  imputed.dosages  imputed.genotypes  masked.genotypes  out.dosages  out.genotypes
example/cross/: accuracy.py  example.sh  founders.txt
example/geno/: example.sh  masked.genotypes  true.genotypes
example/genotypes/: maskedHaplotypes  pedigree.txt  trueHaplotypes.txt
example/pop/: example.sh
pythonhmm/: alphaplantimpute2.py  pythonhmm.py
src/: pythonhmm.py
testdata/: accuracy.py  checkResults_dh.r  createTestData.r  createTestDataDH.r
testdata/genotypes/: maskedGenotypes_dh.txt  maskedHaplotypes_dh.txt  pedigree_dh.txt  trueGenotypes.txt  trueGenotypes_dh.txt  trueHaplotypes_dh.txt
