[metadata]
name = pythonhmm
author = Steve Thorn
author_email = steve.thorn@ed.ac.uk
description = A program for imputation
long_description = Longer descriptiona goes here
classifiers =
    Programming Language :: Python :: 3
requires = 
    numba
    numpy

[options]
packages = 
    pythonhmm
    pythonhmm.tinyhouse
install_requires =
    numba
    numpy
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
    PythonHMM = pythonhmm.pythonhmm:main
