[metadata]
name = alphaplantimpute2
author = Steve Thorn
author_email = steve.thorn@ed.ac.uk
description = Software for phasing and imputing genotypes in plant populations
long_description = Longer description goes here
classifiers =
    Programming Language :: Python :: 3
requires = 
    numba
    numpy

[options]
packages = 
    alphaplantimpute2
    alphaplantimpute2.tinyhouse
install_requires =
    numba
    numpy
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
    AlphaPlantImpute2 = alphaplantimpute2.alphaplantimpute2:main
