[metadata]
name = alphaplantimpute2
author = Steve Thorn, Andrew Whalen, John M Hickey
author_email = alphagenes@roslin.ed.ac.uk
description = Software for phasing and imputing genotypes in plant populations
long_description = ''
home-page = http://alphagenes.roslin.ed.ac.uk 
classifiers =
    Programming Language :: Python :: 3
requires = 
    numba
    numpy

[options]
packages = 
    alphaplantimpute2
    alphaplantimpute2.tinyhouse
install_requires =
    numba
    numpy
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
    AlphaPlantImpute2 = alphaplantimpute2.alphaplantimpute2:main
